docs/api/qiskit/0.37/qiskit.providers.fake_provider.FakeQuitoV2.mdx
---
title: FakeQuitoV2 (v0.37)
description: API reference for qiskit.providers.fake_provider.FakeQuitoV2 in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeQuitoV2
---

# FakeQuitoV2

<Class id="qiskit.providers.fake_provider.FakeQuitoV2" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/backends/quito/fake_quito.py" signature="FakeQuitoV2" modifiers="class">
  Bases: `qiskit.providers.fake_provider.fake_backend.FakeBackendV2`

  A fake 5 qubit backend.

  FakeBackendV2 initializer.

  ## Methods

  <span id="qiskit-providers-fake-provider-fakequitov2-acquire-channel" />

  ### acquire\_channel

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.acquire_channel" signature="FakeQuitoV2.acquire_channel(qubit)">
    Return the acquisition channel for the given qubit.

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The Qubit measurement acquisition line.

    **Return type**

    [AcquireChannel](qiskit.pulse.channels.AcquireChannel "qiskit.pulse.channels.AcquireChannel")
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-control-channel" />

  ### control\_channel

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.control_channel" signature="FakeQuitoV2.control_channel(qubits)">
    Return the secondary drive channel for the given qubit

    This is typically utilized for controlling multiqubit interactions. This channel is derived from other channels.

    This is required to be implemented if the backend supports Pulse scheduling.

    **Parameters**

    **qubits** (`Iterable`\[`int`]) – Tuple or list of qubits of the form `(control_qubit, target_qubit)`.

    **Returns**

    The multi qubit control line.

    **Return type**

    List\[[ControlChannel](qiskit.pulse.channels.ControlChannel "qiskit.pulse.channels.ControlChannel")]
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-drive-channel" />

  ### drive\_channel

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.drive_channel" signature="FakeQuitoV2.drive_channel(qubit)">
    Return the drive channel for the given qubit.

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The Qubit drive channel

    **Return type**

    [DriveChannel](qiskit.pulse.channels.DriveChannel "qiskit.pulse.channels.DriveChannel")
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-measure-channel" />

  ### measure\_channel

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.measure_channel" signature="FakeQuitoV2.measure_channel(qubit)">
    Return the measure stimulus channel for the given qubit.

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The Qubit measurement stimulus line

    **Return type**

    [MeasureChannel](qiskit.pulse.channels.MeasureChannel "qiskit.pulse.channels.MeasureChannel")
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-qubit-properties" />

  ### qubit\_properties

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.qubit_properties" signature="FakeQuitoV2.qubit_properties(qubit)">
    Return QubitProperties for a given qubit.

    If there are no defined or the backend doesn’t support querying these details this method does not need to be implemented.

    **Parameters**

    **qubit** (`Union`\[`int`, `List`\[`int`]]) – The qubit to get the `QubitProperties` object for. This can be a single integer for 1 qubit or a list of qubits and a list of `QubitProperties` objects will be returned in the same order

    **Returns**

    The [`QubitProperties`](qiskit.providers.QubitProperties "qiskit.providers.QubitProperties") object for the specified qubit. If a list of qubits is provided a list will be returned. If properties are missing for a qubit this can be `None`.

    **Return type**

    qubit\_properties

    **Raises**

    **NotImplementedError** – if the backend doesn’t support querying the qubit properties
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-run" />

  ### run

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.run" signature="FakeQuitoV2.run(run_input, **options)">
    Run on the fake backend using a simulator.

    This method runs circuit jobs (an individual or a list of QuantumCircuit ) and pulse jobs (an individual or a list of Schedule or ScheduleBlock) using BasicAer or Aer simulator and returns a [`Job`](qiskit.providers.Job "qiskit.providers.Job") object.

    If qiskit-aer is installed, jobs will be run using AerSimulator with noise model of the fake backend. Otherwise, jobs will be run using BasicAer simulator without noise.

    Currently noisy simulation of a pulse job is not supported yet in FakeBackendV2.

    **Parameters**

    *   **run\_input** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule")  *or*[*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock") *or list*) – An individual or a list of `ScheduleBlock`, or [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") objects to run on the backend.
    *   **options** – Any kwarg options to pass to the backend for running the config. If a key is also present in the options attribute/object then the expectation is that the value specified will be used instead of what’s set in the options object.

    **Returns**

    The job object for the run

    **Return type**

    [Job](qiskit.providers.Job "qiskit.providers.Job")

    **Raises**

    *   **QiskitError** – If a pulse job is supplied and qiskit-aer is not
    *   **installed.** –
  </Function>

  <span id="qiskit-providers-fake-provider-fakequitov2-set-options" />

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeQuitoV2.set_options" signature="FakeQuitoV2.set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  ## Attributes

  ### backend\_name

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.backend_name" attributeValue="'fake_quito_v2'" />

  ### conf\_filename

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.conf_filename" attributeValue="'conf_quito.json'" />

  ### coupling\_map

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.coupling_map">
    Return the [`CouplingMap`](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") object
  </Attribute>

  ### defs\_filename

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.defs_filename" attributeValue="'defs_quito.json'" />

  ### dirname

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.dirname" attributeValue="'/home/runner/work/qiskit/qiskit/.tox/docs/lib/python3.8/site-packages/qiskit/providers/fake_provider/backends/quito'" />

  ### dt

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.dt">
    Return the system time resolution of input signals

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The input signal timestep in seconds. If the backend doesn’t define `dt` `None` will be returned

    **Return type**

    dt
  </Attribute>

  ### dtm

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.dtm">
    Return the system time resolution of output signals

    **Returns**

    The output signal timestep in seconds.

    **Return type**

    dtm
  </Attribute>

  ### instruction\_durations

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.instruction_durations">
    Return the [`InstructionDurations`](qiskit.transpiler.InstructionDurations "qiskit.transpiler.InstructionDurations") object.
  </Attribute>

  ### instruction\_schedule\_map

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.instruction_schedule_map">
    Return the [`InstructionScheduleMap`](qiskit.pulse.InstructionScheduleMap "qiskit.pulse.InstructionScheduleMap") for the instructions defined in this backend’s target.
  </Attribute>

  ### instructions

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.instructions">
    A list of Instruction tuples on the backend of the form `(instruction, (qubits)`

    **Return type**

    `List`\[`Tuple`\[[`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction"), `Tuple`\[`int`]]]
  </Attribute>

  ### max\_circuits

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.max_circuits" />

  ### meas\_map

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.meas_map">
    Return the grouping of measurements which are multiplexed This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The grouping of measurements which are multiplexed

    **Return type**

    meas\_map
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.num_qubits">
    Return the number of qubits the backend has.

    **Return type**

    `int`
  </Attribute>

  ### operation\_names

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.operation_names">
    A list of instruction names that the backend supports.

    **Return type**

    `List`\[`str`]
  </Attribute>

  ### operations

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.operations">
    A list of [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") instances that the backend supports.

    **Return type**

    `List`\[[`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")]
  </Attribute>

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](qiskit.providers.fake_provider.FakeQuitoV2#run "qiskit.providers.fake_provider.FakeQuitoV2.run") method.
  </Attribute>

  ### props\_filename

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.props_filename" attributeValue="'props_quito.json'" />

  ### provider

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.provider">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Attribute>

  ### target

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.target">
    A [`qiskit.transpiler.Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object for the backend.

    **Return type**

    [Target](qiskit.transpiler.Target "qiskit.transpiler.Target")
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeQuitoV2.version" attributeValue="2" />
</Class>

